fixed some layout issues in different pages

--- a/src/04_Variables_And_StyleComponents/MenuBar/MenuBar.scss
+++ b/src/04_Variables_And_StyleComponents/MenuBar/MenuBar.scss
@@ -1,1 +1,5 @@
 @import "../Variables/Fonts_And_Styles.scss";
+.menu,
+.clear {
+  cursor: $pointer, pointer;
+}
